Implemented Show more functionality (paging)

--- a/templates/non-public/newsFeed-view.html
+++ b/templates/non-public/newsFeed-view.html
@@ -75,6 +75,7 @@
                 <a href="" ng-if="feed.id != postId" ng-click="showAllComments(feed)" class="btn btn-primary display-all-comments">See all</a>
             </div>
         </div>
+        <a href="" ng-click="showMore()" class="btn btn-danger pull-right">Show more feeds</a>
     </div>
     <div class="col-md-4">
         <div ng-include="'templates/non-public/friends-panel-view.html'"></div>
