--- a/templates/non-public/user-wall-view.html
+++ b/templates/non-public/user-wall-view.html
@@ -89,6 +89,7 @@
                 <a href="" ng-if="feed.id != postId" ng-click="showAllComments(feed)" class="btn btn-primary display-all-comments">See all</a>
             </div>
         </div>
+        <a href="" ng-click="showMoreFeedsOnWall()" class="btn btn-danger pull-right">Show more feeds</a>
     </div>
     <div class="col-md-4 postBoxContainer">
         <form ng-if="wallFeeds[0].wallOwner.isFriend || wallFeeds[0].wallOwner.username == currentUsername" class="form-horizontal" name="feedForm">
