--- a/templates/non-public/newsFeed-view.html
+++ b/templates/non-public/newsFeed-view.html
@@ -76,6 +76,7 @@
             </div>
         </div>
         <a href="" ng-click="showMore()" class="btn btn-danger pull-right">Show more feeds</a>
+        <a href="" ng-click="showLess()" class="btn btn-danger pull-right">Show more feeds</a>
     </div>
     <div class="col-md-4">
         <div ng-include="'templates/non-public/friends-panel-view.html'"></div>
