--- a/templates/non-public/user-wall-view.html
+++ b/templates/non-public/user-wall-view.html
@@ -92,6 +92,7 @@
             </div>
         </div>
         <a href="" ng-click="showMoreFeedsOnWall()" class="btn btn-danger pull-right">Show more feeds</a>
+        <a href="" ng-click="showLessFeedsOnWall()" class="btn btn-danger pull-right">Show less feeds</a>
     </div>
     <div class="col-md-4 postBoxContainer">
         <form ng-if="wallFeeds[0].wallOwner.isFriend || wallFeeds[0].wallOwner.username == currentUsername" class="form-horizontal" name="feedForm">
