Design bugs fixed

--- a/templates/non-public/user-preview-view.html
+++ b/templates/non-public/user-preview-view.html
@@ -2,7 +2,7 @@
     <div class="pull-left">
         <img actual-src="{{hoveredUserPreviewData.profileImageData}}" ng-src="./img/testP.jpg" alt="img" class="img-thumbnail hoveredUser-image"/>
     </div>
-    <div >
+    <div class="username" >
         <h4>{{hoveredUserPreviewData.name}}</h4>
     </div>
     <div >
