--- a/templates/non-public/user-wall-view.html
+++ b/templates/non-public/user-wall-view.html
@@ -16,7 +16,7 @@
     <div class="col-md-8">
         <div class="modal-dialog" ng-repeat="feed in wallFeeds">
             <div class="modal-content" data-id="{{feed.id}}">
-                <div class="modal-header">
+                <div class="modal-header overflowFix">
                     <button ng-if="feed.author.username === currentUsername || feed.wallOwner.username === currentUsername" ng-controller="postController" type="button" ng-click="deletePost(feed)" class="close" data-dismiss="modal" aria-hidden="true">x</button>
                     <a href="" class="thumbnail pull-left">
                         <img alt="img" actual-src="{{feed.author.profileImageData}}" ng-src="./img/testP.jpg"/>
@@ -64,14 +64,14 @@
                 <div class="panel panel-default post-comments-container" ng-repeat="comment in feed.comments">
                     <button ng-controller="commentController" ng-if="comment.author.username === currentUsername || feed.wallOwner.username === currentUsername"
                             type="button" ng-click="deleteComment(feed, comment)" class="close" data-dismiss="modal" aria-hidden="true">x</button>
-                    <div class="panel-heading">
+                    <div class="panel-heading overflowFix">
                         <img actual-src="{{comment.author.profileImageData}}" ng-src="./img/testP.jpg" class="img-thumbnail comment-user-image" alt="image"/>
                         <span class="panel-title"><strong ng-click="goToUserWall(comment.author.username)" ng-mouseenter="previewUser(comment)" class="username">{{comment.author.name}}</strong>
                             posted at {{comment.date | date: "dd/MM/yy HH:mm:ss"}}
                         </span>
                         <div ng-mouseleave="stopUserPreview()" ng-if="isUserHovered && hoveredPostId == comment.id" ng-include="'templates/non-public/user-preview-view.html'"></div>
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body container-postContent">
                         {{comment.commentContent}}
                     </div>
                     <div class="container-comment-votes">
