--- a/css/app.css
+++ b/css/app.css
@@ -6,6 +6,11 @@ footer {
 /*Username*/
 .username {
     cursor: pointer;
+    word-wrap: break-word;
+    white-space: nowrap;
+    width: 12em;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 /*Username*/
 
@@ -253,12 +258,16 @@ h1#navbar {
 }
 
 .user-wall-fullName {
+    display: inline-block;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 2.5rem;
     font-weight: 500;
     line-height: 1.1;
     color: #317eac;
     text-decoration: underline;
+    overflow: hidden;
+    width: 250px;
+    height: 90px;
 }
 
 .modal-header  {
@@ -322,8 +331,10 @@ h1#navbar {
     z-index: 1000;
 }
 
-.user-preview {
-
+.user-preview > td{
+    width:235px;
+    max-width:235px;
+    overflow: hidden;
 }
 
 .user-preview-image {
@@ -436,4 +447,9 @@ h1#navbar {
 }
 .third-controller small {
     color: #9c9;
+}
+
+.overflowFix {
+    overflow: hidden;
+    word-wrap: break-word;
 }
