--- a/templates/non-public/navbar-view.html
+++ b/templates/non-public/navbar-view.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="container-fluid">
                     <div class="col-md-10">
-                        <div class="navbar-header">
+                        <div class="navbar-header overflowFix">
                             <div class="profile-image-thumb">
                                 <a href="" >
                                     <img class="img-thumbnail navi-picture" actual-src="{{currentUserprofilepic}}" ng-src="./img/testP.jpg" alt="img"/>
