--- a/templates/non-public/newsFeed-view.html
+++ b/templates/non-public/newsFeed-view.html
@@ -6,7 +6,7 @@
     <div class="col-md-8">
         <div class="modal-dialog" ng-repeat="feed in newsFeeds">
             <div class="modal-content" data-id="{{feed.id}}">
-                <div class="modal-header">
+                <div class="modal-header overflowFix">
                     <button ng-if="feed.author.username === currentUsername || feed.wallOwner.username === currentUsername" ng-controller="postController" type="button" ng-click="deleteFeedPost(feed)" class="close" data-dismiss="modal" aria-hidden="true">x</button>
                     <a href="" class="thumbnail pull-left">
                         <img alt="img" actual-src="{{feed.author.profileImageData}}" ng-src="./img/testP.jpg"/>
@@ -38,10 +38,13 @@
                     <form name="commentForm">
                         <div class="form-group comment-box">
                             <label class="control-label pull-left" for="inputLarge">Post your comment</label>
-                            <input name="commentField" ng-minlength="2" required ng-model="commentRawContent" class="form-control input-lg" type="text" id="inputLarge">
-                        <span class="label label-danger error" ng-show="commentForm.commentField.$error.minlength">
-                                Min length is 2 letters!
-                        </span>
+                            <input name="commentField" ng-minlength="2" ng-maxlength="255" required ng-model="commentRawContent" class="form-control input-lg" type="text" id="inputLarge">
+                            <span class="label label-danger error" ng-show="commentForm.commentField.$error.minlength">
+                                    Min length is 2 letters!
+                            </span>
+                            <span class="label label-danger error" ng-show="commentForm.commentField.$error.maxlength">
+                                    Min length is 255 letters!
+                            </span>
                         </div>
                         <span class="badge">{{feed.comments.length}}</span>
                         <button ng-disabled="commentForm.$invalid" ng-click="addCommentToPost(feed, commentRawContent)" type="button" id="{{feed.id}}" class="btn btn-primary" >Comment
@@ -50,14 +53,14 @@
                     </form>
                 </div>
                 <div class="panel panel-default post-comments-container" ng-repeat="comment in feed.comments">
-                    <div class="panel-heading">
+                    <div class="panel-heading overflowFix">
                         <img actual-src="{{comment.author.profileImageData}}" ng-src="./img/testP.jpg" class="img-thumbnail comment-user-image" alt="image"/>
                         <span class="panel-title"><strong ng-click="goToUserWall(comment.author.username)"  ng-mouseenter="previewUser(comment)" class="username">{{comment.author.name}}</strong>
                             posted at {{comment.date | date: "dd/MM/yy HH:mm:ss"}}
                         </span>
                         <div ng-mouseleave="stopUserPreview()" ng-if="isUserHovered && hoveredPostId == comment.id" ng-include="'templates/non-public/user-preview-view.html'"></div>
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body container-postContent">
                         {{comment.commentContent}}
                     </div>
                     <div class="container-comment-votes">
