--- a/templates/non-public/friends-friendsPreview-view.html
+++ b/templates/non-public/friends-friendsPreview-view.html
@@ -3,7 +3,7 @@
         <h3 class="panel-title">Friends {{friendsFriends.length}} total</h3>
     </div>
     <div ng-repeat="friend in friendsFriends" class="panel-body">
-        <a href="" class="thumbnail">
+        <a href="" class="thumbnail friends-thumbs">
             <img src="" alt="img" ng-src="{{friend.profileImageData}}" class="friendsProfilePic"/>
             <span class="friendsName">{{friend.name}}</span>
         </a>
