--- a/templates/non-public/friends-panel-view.html
+++ b/templates/non-public/friends-panel-view.html
@@ -5,11 +5,11 @@
                 <h3 class="panel-title">Friends {{ownFriendsCollection.length}} total</h3>
             </div>
             <div class="row">
-                <div ng-repeat="friend in ownFriendsCollection">
+                <div ng-repeat="friend in ownFriendsCollection | limitTo: 9">
                     <div class="col-md-4 friends-panel-thumb">
-                        <a href="" ng-click="goToUserWall(friend.username)" class="thumbnail">
+                        <a href="" ng-click="goToUserWall(friend.username)" class="thumbnail friends-thumbs">
                             <img alt="img" actual-src="{{friend.profileImageData}}" ng-src="./img/testP.jpg" class="friendsProfilePic"/>
-                            <span class="friendsName username">{{friend.name}}</span>
+                            <span class="friendsName username" id="friends-names">{{friend.name}}</span>
                         </a>
                     </div>
                 </div>
