--- a/templates/non-public/page-header-view.html
+++ b/templates/non-public/page-header-view.html
@@ -2,7 +2,7 @@
     <div class="col-sm-12">
         <div class="alert alert-dismissible alert-info">
             <h1 id="navbar" > {{pageHeader}}
-                <span class="glyphicon glyphicon-apple" aria-hidden="true"></span>
+                <i class="fa fa-rss-square"></i>
             </h1>
         </div>
 
