--- a/templates/non-public/user-preview-view.html
+++ b/templates/non-public/user-preview-view.html
@@ -3,12 +3,12 @@
         <img actual-src="{{hoveredUserPreviewData.profileImageData}}" ng-src="./img/testP.jpg" alt="img" class="img-thumbnail hoveredUser-image"/>
     </div>
     <div class="username" >
-        <h4>{{hoveredUserPreviewData.name}}</h4>
+        <h4 ng-click="goToUserWall(hoveredUserPreviewData.username)">{{hoveredUserPreviewData.name}}</h4>
     </div>
     <div >
         <span><strong>Gender:</strong>
-            <span class="alert-link" ng-if="hoveredUserPreviewData.gender == 1">male</span>
-            <span class="alert-link" ng-if="hoveredUserPreviewData.gender == 2">female</span>
+            <span class="alert-link" ng-if="hoveredUserPreviewData.gender == 1"><i class="fa fa-male"></i></span>
+            <span class="alert-link" ng-if="hoveredUserPreviewData.gender == 2"><i class="fa fa-female"></i></span>
         </span>
     </div>
     <div ng-if="hoveredUserPreviewData.username != currentUsername">
