--- a/templates/non-public/user-profile-view.html
+++ b/templates/non-public/user-profile-view.html
@@ -11,7 +11,7 @@
                         <p class="text-primary"><strong>Allowed format: .jpg</strong></p>
                         <p class="text-primary"><strong>Limit: 128kb.</strong></p>
                         <span class="btn btn-default btn-file btn-primary">
-                            Upload <input type="file" ng-model="profileData.profileImageData" accept="image/*" app-filereader />
+                            Upload <i class="fa fa-folder-open-o"></i><input type="file" ng-model="profileData.profileImageData" accept="image/*" app-filereader />
                         </span>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                                     <div>
                                         <p class="text-info"><strong>Limit 1024kb.</strong></p>
                                      <span class="btn btn-default btn-file btn-primary">
-                                         Upload <input type="file" ng-model="profileData.coverImageData" accept="image/*" app-filereader />
+                                         Upload <i class="fa fa-folder-open-o"></i><input type="file" ng-model="profileData.coverImageData" accept="image/*" app-filereader />
                                      </span>
                                     </div>
                                 </div>
