--- a/css/app.css
+++ b/css/app.css
@@ -27,9 +27,11 @@ footer {
 }
 
 .welcomeText {
+    font-family: 'Roboto Slab', serif;
     text-align: center;
     color: white;
     font-size: 5.5rem;
+    font-weight: 700;
     margin-top: 6%;
     margin-bottom: 6%;
 }
@@ -43,6 +45,8 @@ footer {
 }
 
 .customBtn {
+    font-family: 'Roboto Slab', serif;
+    font-size: 1.7rem;
     width: 102px;
 }
 /*Welcome screen*/
@@ -83,6 +87,7 @@ h1#navbar {
 
 .navi-username {
     font-size: 1.9rem;
+    font-family: 'Oswald', sans-serif;
     color: white;
     text-decoration: underline;
 }
@@ -132,6 +137,12 @@ h1#navbar {
     max-height: 200px;
 }
 
+#wallUsername {
+    width: 500px;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 700;
+}
+
 #wallUser-timeline {
     max-width: 100%;
     max-height: 250px;
@@ -179,7 +190,13 @@ h1#navbar {
     height: 150px;
     max-height: 150px;
 }
-
+.friends-thumbs {
+    overflow:hidden;
+}
+#friends-names {
+    overflow:hidden;
+    display: inline-block;
+}
 .friendsPanel {
     margin-top: 8%;
 }
@@ -206,6 +223,17 @@ h1#navbar {
 
 .feed-comment-box {
     margin: 0 177%;
+}
+
+span.date {
+    font-family: 'Oswald', sans-serif;
+    font-size: 14px;
+}
+
+#btn-delete-comment {
+    background-color: #dddddd;
+    padding-bottom: 23px;
+    border-bottom: 1px solid gray;
 }
 
 #feedCommentBox {
