--- a/templates/non-public/user-wall-view.html
+++ b/templates/non-public/user-wall-view.html
@@ -91,7 +91,7 @@
                 <a href="" ng-if="feed.id != postId" ng-click="showAllComments(feed)" class="btn btn-primary display-all-comments">See all</a>
             </div>
         </div>
-        <a href="" ng-click="showMoreFeedsOnWall()" class="btn btn-danger pull-right">Show more feeds</a>
+        <a href="" ng-click="showMoreFeedsOnWall()" class="btn btn-info pull-right">Show more feeds</a>
         <a href="" ng-if="wallPageSize > 2" ng-click="showLessFeedsOnWall()" class="btn btn-danger pull-right">Show less feeds</a>
     </div>
     <div class="col-md-4 postBoxContainer">
