--- a/templates/non-public/friends-panel-view.html
+++ b/templates/non-public/friends-panel-view.html
@@ -2,7 +2,7 @@
     <div class="col-md-11 friendsPanel">
         <div class="panel panel-warning" ng-controller="feedsController" >
             <div class="panel-heading">
-                <h3 class="panel-title">Friends {{ownFriendsCollection.length}} total</h3>
+                <h3 class="panel-title">Friends {{ownFriendsCollection.length}} total <i class="fa fa-users"></i></h3>
             </div>
             <div class="row">
                 <div ng-repeat="friend in ownFriendsCollection | limitTo: 9">
