--- a/templates/non-public/newsFeed-view.html
+++ b/templates/non-public/newsFeed-view.html
@@ -78,7 +78,7 @@
                 <a href="" ng-if="feed.id != postId" ng-click="showAllComments(feed)" class="btn btn-primary display-all-comments">See all</a>
             </div>
         </div>
-        <a href="" ng-click="showMore()" class="btn btn-danger pull-right">Show more feeds</a>
+        <a href="" ng-click="showMore()" class="btn btn-info pull-right">Show more feeds</a>
         <a href="" ng-if="feedPageSize > 2" ng-click="showLess()" class="btn btn-danger pull-right">Show less feeds</a>
     </div>
     <div class="col-md-4">
