--- a/templates/public/login-view.html
+++ b/templates/public/login-view.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-lg-8 col-lg-offset-2">
-                        <button ng-disabled="loginForm.$invalid" ng-click="loginUser(user)" type="submit" class="btn btn-primary">Login</button>
+                        <button ng-disabled="loginForm.$invalid" ng-click="loginUser(user)" type="submit" class="btn btn-primary">Login <i class="fa fa-sign-in"></i></button>
                         <button ng-click="go('/')" type="reset" class="btn btn-default">Cancel</button>
                     </div>
                 </div>
