--- a/templates/public/register-view.html
+++ b/templates/public/register-view.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-lg-5 col-lg-offset-2">
-                        <button ng-click="registerUser(userData)" ng-disabled="registerForm.$invalid" type="submit" class="btn btn-primary">Register</button>
+                        <button ng-click="registerUser(userData)" ng-disabled="registerForm.$invalid" type="submit" class="btn btn-primary">Register <i class="fa fa-user-plus"></i></button>
                         <button ng-click="go('/')" type="reset" class="btn btn-default">Cancel</button>
                     </div>
                 </div>
