--- a/templates/public/welcome-view.html
+++ b/templates/public/welcome-view.html
@@ -2,16 +2,16 @@
     <div class="col-sm-12 welcomeHeader">
         <div class="row">
             <div class="col-sm-6">
-                <h1 class="welcomeText">Welcome</h1>
+                <h1 class="welcomeText"><i class="fa fa-rss"></i> Welcome </h1>
             </div>
             <div class="col-sm-6">
                 <div class="pull-right sign-btn-container">
                    <div class="row">
                        <div class="col-md-6">
-                           <a href="#/login" class="btn btn-success btn-default customBtn">Login</a>
+                           <a href="#/login" class="btn btn-success btn-default customBtn">Login <i class="fa fa-sign-in"></i></a>
                        </div>
                        <div class="col-md-6">
-                           <a href="#/register" class="btn btn-info btn-default customBtn">Register</a>
+                           <a href="#/register" class="btn btn-info btn-default customBtn">Register <i class="fa fa-user-plus"></i></a>
                        </div>
                    </div>
                 </div>
