Max-min length and styles added

--- a/templates/non-public/user-changePassword-view.html
+++ b/templates/non-public/user-changePassword-view.html
@@ -25,8 +25,8 @@
                 </div>
                 <div class="form-group">
                     <div class="col-lg-6 col-lg-offset-2">
-                        <button ng-click="changePassword(user)" type="submit" class="btn btn-primary">Save changes</button>
-                        <button onclick="go('/feeds')" type="reset" class="btn btn-default">Cancel</button>
+                        <button ng-click="changePassword(user)" type="submit" class="btn btn-primary">Save changes <i class="fa fa-pencil-square-o"></i></button>
+                        <a href="#/users/feeds" type="reset" class="btn btn-default">Cancel</a>
                     </div>
                 </div>
             </fieldset>
