--- a/templates/non-public/user-profile-view.html
+++ b/templates/non-public/user-profile-view.html
@@ -69,7 +69,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-lg-10 col-lg-offset-2">
-                                <button ng-disabled="profileForm.$invalid" ng-click="editUserProfile(profileData)" type="submit" class="btn btn-success btn-primary btn-lg">Edit profile</button>
+                                <button ng-disabled="profileForm.$invalid" ng-click="editUserProfile(profileData)" type="submit" class="btn btn-success btn-primary btn-lg">Edit profile <i class="fa fa-pencil-square-o"></i></button>
                                 <a href="#/users/feeds" type="submit" class="btn btn-danger btn-primary btn-lg">Cancel</a>
                             </div>
                         </div>
