--- a/templates/non-public/newsFeed-view.html
+++ b/templates/non-public/newsFeed-view.html
@@ -78,8 +78,8 @@
                 <a href="" ng-if="feed.id != postId" ng-click="showAllComments(feed)" class="btn btn-primary display-all-comments">See all</a>
             </div>
         </div>
-        <a href="" ng-click="showMore()" class="btn btn-info pull-right">Show more feeds</a>
-        <a href="" ng-if="feedPageSize > 2" ng-click="showLess()" class="btn btn-danger pull-right">Show less feeds</a>
+        <a href="" ng-click="showMore()" class="btn btn-info pull-right">Show more feeds <i class="fa fa-level-down"></i></a>
+        <a href="" ng-if="feedPageSize > 2" ng-click="showLess()" class="btn btn-danger pull-right">Show less feeds <i class="fa fa-level-up"></i></a>
     </div>
     <div class="col-md-4">
         <div ng-include="'templates/non-public/friends-panel-view.html'"></div>
